--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: lid_companion
-description: A new Flutter project.
+description: A companion to Let it Die, helpfull farm tracker and information gathering.
 
 publish_to: "none"
 
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons:
+  flutter_launcher_name:
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +21,10 @@ dev_dependencies:
 
   flutter_lints: ^1.0.0
 
+flutter_launcher_name:
+  name: "Let it Die Companion"
+
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
