--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,6 +56,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'com.example.lid_companion'
 }
 
 flutter {
