--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/json/
 
 flutter_icons:
   image_path: "assets/images/app-logo7.png" 
