feat: implemented local persistence and state management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_slidable:
   flutter_launcher_icons:
   # url_launcher:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
