--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+android/app/deployment_cert.der
+android/app/private_key.pepk
